<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_all_done"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_have_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/all_done_welcome"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_32sdp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/family_is_a_very_precious_thing_take_good_care_of_it"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/invite_your_family"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:id="@+id/tv_invitation_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="1 2 3 4 6"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_32sdp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_invited"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/share_my_key"
                android:textAllCaps="false"
                android:textColor="#fff"
                app:cornerRadius="@dimen/_16sdp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_first_time"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_36sdp"
                android:layout_marginEnd="@dimen/_36sdp"
                android:layout_marginBottom="@dimen/_16sdp"
                android:gravity="center"
                android:paddingTop="@dimen/_8sdp"
                android:paddingBottom="@dimen/_8sdp"
                android:text="@string/later_move_to_my_council"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                app:cornerRadius="@dimen/_16sdp"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="@dimen/_1sdp" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>

