<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.ConfirmPhoneActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_16sdp">

        <TextView
            android:id="@+id/tv_have_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/confirm_your_phone_number"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_24sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/you_recived_otp_code_with_sms" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_8sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/code"
                android:textColor="#000"
                android:textSize="@dimen/_16sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:hint="@string/code"
                android:inputType="phone"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_resend_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/resend_otp_code"
            android:textSize="@dimen/_14sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:cornerRadius="@dimen/_16sdp"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:iconSize="@dimen/_16sdp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</ScrollView>