<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.CouncilNameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_16sdp"
        tools:context=".activities.CouncilNameActivity">


        <TextView
            android:id="@+id/tv_have_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="Sign Up"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_24sdp" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="How You Show Up To The Others"
            android:textSize="@dimen/_12sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_profile_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pick_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/iv_delete_image"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/circle"
                    android:backgroundTint="@color/colorAccent"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/ic_delete"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/iv_profile_image"
                    app:layout_constraintTop_toTopOf="@id/iv_profile_image"
                    tools:ignore="ContentDescription" />


            </androidx.constraintlayout.widget.ConstraintLayout>

            <FrameLayout
                android:id="@+id/fl_choose_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_picked_color"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_circle_color"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_circle_border"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/tv_choose_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Choose\nyour color" />


            </FrameLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/prompt_email"
                android:textColor="#000"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="5"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/full_name"
                android:textColor="#000"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_full_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="5"
                android:hint="@string/full_name"
                android:inputType="textPersonName"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/password"
                android:textColor="#000"
                android:textSize="@dimen/_14sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:layout_weight="5"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:text="@string/phone"
                android:textColor="#000"
                android:textSize="@dimen/_14sdp" />

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center"
                app:ccpDialog_showPhoneCode="true"
                app:ccp_arrowSize="@dimen/_12sdp"
                app:ccp_autoFormatNumber="true"
                app:ccp_customMasterCountries="eg,sa"
                app:ccp_defaultNameCode="sa"
                app:ccp_excludedCountries="il"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="true"
                app:ccp_textSize="@dimen/_12sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:layout_marginBottom="@dimen/_8sdp"
                android:layout_weight="4"
                android:hint="@string/phone"
                android:inputType="phone"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_16sdp"
            android:gravity="center"
            android:text="@string/you_will_receiving_otp_code_with_sms" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_36sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_36sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:gravity="center"
            android:paddingTop="@dimen/_8sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textAllCaps="false"
            android:textColor="#fff"
            app:cornerRadius="@dimen/_16sdp"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="textEnd"
            app:iconSize="@dimen/_16sdp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>
</ScrollView>